--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title> Simple to do list </title?
+	<title> Simple to do list </title>
 <link href="https://fonts.googleapis.com/css?family=Poppings:wght@400;5--&displau=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
