--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="container">
 		<div id = "newtask"> </div>
-			<input type="text" placeholder="Task to be done..">
+			<input type="text" placeholder="Task my be done..">
 			<button id="push"> Add </button>
 		</div>
 		 <div id="tasks"> </div>
