--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Simple To Do List</title>
+    <title>Harshi's To Do List</title>
     <!--Google Font-->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;500&display=swap" rel="stylesheet">
     <!--Font Awesome CDN-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <!--Stylesheet-->
@@ -12,8 +12,11 @@
 <body>
     <div class="container">
         <div id="newtask">
-            <input type="text" placeholder="Task to be done..">
-            <button id="push">Add</button>
+            <input type="text" placeholder="Title..">
+            <input type="text" placeholder="Description..">
+            <input type="date" placeholder="Date..">
+
+          	<button id="push">Add</button>
         </div>
         <div id="tasks"></div>
     </div>
