--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Harshi's To Do List</title>
     <!--Google Font-->
-    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto Slab:wght@400;500&display=swap" rel="stylesheet">
     <!--Font Awesome CDN-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <!--Stylesheet-->
@@ -12,11 +12,15 @@
 <body>
     <div class="container">
         <div id="newtask">
+        <table>
+        <tr>
             <input type="text" placeholder="Title..">
             <input type="text" placeholder="Description..">
             <input type="date" placeholder="Date..">
 
           	<button id="push">Add</button>
+         </tr>
+         </table>
         </div>
         <div id="tasks"></div>
     </div>
