--- a/index.html
+++ b/index.html
@@ -12,16 +12,12 @@
 <body>
     <div class="container">
         <div id="newtask">
-        <table>
-        <tr>
-            <input type="text" placeholder="Title..">
-            <input type="text" placeholder="Description..">
-            <input type="date" placeholder="Date..">
+            <input name="title" type="text" placeholder="Title..">
+            <input name="desc" type="text" placeholder="Description..">
+            <input name="dt" type="date" placeholder="Date..">
 
           	<button id="push">Add</button>
-         </tr>
-         </table>
-        </div>
+         </div>
         <div id="tasks"></div>
     </div>
     <!--Script-->
