--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="container">
         <div id="newtask">
-            <input name="title" type="text" placeholder="Title..">
-            <input name="desc" type="text" placeholder="Description..">
-            <input name="dt" type="date" placeholder="Date..">
+            <input id="title" type="text" placeholder="Title..">
+            <input id="desc" type="text" placeholder="Description..">
+            <input id="dt" type="date" placeholder="Date..">
 
           	<button id="push">Add</button>
          </div>
