--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Harshi's To Do List</title>
+    <title>Simple To Do List</title>
     <!--Google Font-->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto Slab:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <!--Font Awesome CDN-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <!--Stylesheet-->
@@ -12,12 +12,9 @@
 <body>
     <div class="container">
         <div id="newtask">
-            <input id="title" type="text" placeholder="Title..">
-            <input id="desc" type="text" placeholder="Description..">
-            <input id="dt" type="date" placeholder="Date..">
-
-          	<button id="push">Add</button>
-         </div>
+            <input type="text" placeholder="Task to be done..">
+            <button id="push">Add</button>
+        </div>
         <div id="tasks"></div>
     </div>
     <!--Script-->
