--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 </head>
 <body>
     <div class="container">
-        <div id="newtask">
+        <div id="newtask1">
+            <input type="text" placeholder="Task to be done..">
+        </div>
+        <div id="newtask2">
+ 			<input type="text" placeholder="Task to be done..">
+        </div>
+		<div id="newtask3">
             <input type="text" placeholder="Task to be done..">
             <button id="push">Add</button>
         </div>
+
         <div id="tasks"></div>
     </div>
     <!--Script-->
