--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <input type="text" placeholder="Task to be done..">
         </div>
         <div id="newtask2">
- 			<input type="text" placeholder="Task to be done..">
+ 			<input type="text" placeholder="description..">
         </div>
 		<div id="newtask3">
-            <input type="text" placeholder="Task to be done..">
+            <input type="date" placeholder="date..">
             <button id="push">Add</button>
         </div>
 
