--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Simple Do List</title>
+    <title>Harshi's to Do List</title>
     <!--Google Font-->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <!--Font Awesome CDN-->
@@ -14,9 +14,11 @@
         <div id="newtask1">
             <input type="text" placeholder="Task to be done..">
         </div>
+        <br>
         <div id="newtask2">
  			<input type="text" placeholder="description..">
         </div>
+        <br>
 		<div id="newtask3">
             <input type="date" placeholder="date..">
             <button id="push">Add</button>
