--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
     <div class="container">
         <div id="newtask1">
-            <input type="text" placeholder="Task to be done..">
+            <input id="newtask1" type="text" placeholder="Task to be done..">
         </div>
         <br>
         <div id="newtask2">
- 			<input type="text" placeholder="description..">
+ 			<input id="newtask2" type="text" placeholder="description..">
         </div>
         <br>
 		<div id="newtask3">
-            <input type="date" placeholder="date..">
+            <input id="newtask3" type="date" placeholder="date..">
             <button id="push">Add</button>
         </div>
 
