--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Stylesheet-->
     <link rel="stylesheet" href="style.css">
 </head>
-<body background="images/file.jpg">
+<body>
     <div class="container">
         <div id="newtask1">
             <input id="newtask1" type="text" placeholder="Task to be done..">
